WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
320309
AudioBufferSourceNode output channel count ignores actively-processing state
https://bugs.webkit.org/show_bug.cgi?id=320309
Summary
AudioBufferSourceNode output channel count ignores actively-processing state
Ahmad Saleem
Reported
2026-07-26 01:35:33 PDT
ssia - matching Firefox and spec
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-07-26 01:35:41 PDT
<
rdar://problem/183245229
>
Ahmad Saleem
Comment 2
2026-07-26 01:36:47 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/70201
EWS
Comment 3
2026-07-26 19:05:30 PDT
Committed
317956@main
(d812eb91c045): <
https://commits.webkit.org/317956@main
> Reviewed commits have been landed. Closing PR #70201 and removing active labels.
Ahmad Saleem
Comment 4
2026-07-26 21:58:42 PDT
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/61539
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug