Source/WebCore/Modules/webaudio/AudioBufferSourceNode.cpp
@@ -458,7 +458,7 @@ ExceptionOr<void> AudioBufferSourceNode::setBufferForBindings(RefPtr<AudioBuffer
 
     if (buffer && m_wasBufferSet)
         return Exception { ExceptionCode::InvalidStateError, "The buffer was already set"_s };
-    
+
     if (buffer) {
         m_wasBufferSet = true;
 
@@ -466,17 +466,20 @@ ExceptionOr<void> AudioBufferSourceNode::setBufferForBindings(RefPtr<AudioBuffer
         unsigned numberOfChannels = buffer->numberOfChannels();
         ASSERT(numberOfChannels <= AudioContext::maxNumberOfChannels);
 
-        protect(output(0))->setNumberOfChannels(numberOfChannels);
-
         m_sourceChannels = FixedVector<std::span<const float>>(numberOfChannels);
         m_destinationChannels = FixedVector<std::span<float>>(numberOfChannels);
 
-        for (unsigned i = 0; i < numberOfChannels; ++i) 
+        for (unsigned i = 0; i < numberOfChannels; ++i)
             m_sourceChannels[i] = buffer->channelData(i)->typedSpan();
+    } else {
+        m_sourceChannels = { };
+        m_destinationChannels = { };
     }
 
     m_virtualReadIndex = 0;
     m_buffer = WTF::move(buffer);
+
+    updateOutputChannelCount();
 
     // In case the buffer gets set after playback has started, we need to clamp the grain parameters now.
     if (m_isGrain)
@@ -485,6 +488,25 @@ ExceptionOr<void> AudioBufferSourceNode::setBufferForBindings(RefPtr<AudioBuffer
     acquireBufferContent();
 
     return { };
+}
+
+// https://webaudio.github.io/web-audio-api/#AudioNode-actively-processing
+// https://webaudio.github.io/web-audio-api/#AudioBufferSourceNode
+void AudioBufferSourceNode::updateOutputChannelCount()
+{
+    ASSERT(isMainThread());
+    ASSERT(m_processLock.isHeld());
+    ASSERT(context().isGraphOwner());
+
+    unsigned numberOfChannels = 1;
+    if (m_buffer && isPlayingOrScheduled())
+        numberOfChannels = m_buffer->numberOfChannels();
+
+    ASSERT(numberOfChannels <= AudioContext::maxNumberOfChannels);
+    if (numberOfChannels == output(0)->numberOfChannels())
+        return;
+
+    protect(output(0))->setNumberOfChannels(numberOfChannels);
 }
 
 unsigned AudioBufferSourceNode::numberOfChannels()
@@ -537,8 +559,12 @@ ExceptionOr<void> AudioBufferSourceNode::startPlaying(double when, double grainO
 
     context().sourceNodeWillBeginPlayback(*this);
 
-    // This synchronizes with process().
+    // This synchronizes with process(), it is important to acquire the processLock before the
+    // graphLock to avoid a deadlock given that this is the order process() acquires the locks in.
     Locker locker { m_processLock };
+
+    // Changing the number of output channels below re-configures the graph.
+    Locker contextLocker { context().graphLock() };
 
     m_isGrain = true;
     m_grainOffset = grainOffset;
@@ -553,6 +579,9 @@ ExceptionOr<void> AudioBufferSourceNode::startPlaying(double when, double grainO
 
     acquireBufferContent();
     m_playbackState = SCHEDULED_STATE;
+
+    // The node is now playing, so the output takes the buffer's channel count.
+    updateOutputChannelCount();
 
     return { };
 }
