Source/WebCore/Modules/webaudio/AudioBufferSourceNode.h
@@ -85,6 +85,7 @@ private:
     AudioBufferSourceNode(BaseAudioContext&);
 
     void acquireBufferContent() WTF_REQUIRES_LOCK(m_processLock);
+    void updateOutputChannelCount() WTF_REQUIRES_LOCK(m_processLock);
 
     double tailTime() const final { return 0; }
     double latencyTime() const final { return 0; }
